--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
-{ "scripts": {
+{
+  "scripts": {
     "build": "tsc",
-    "test": "jest",
-},
+    "test": "jest"
+  },
   "dependencies": {
+    "express": "^4.18.1",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
@@ -10,5 +12,20 @@
     "@types/node": "^18.0.0",
     "jest": "^28.1.1",
     "ts-jest": "^28.0.5"
-  }
+  },
+  "name": "jesting",
+  "description": "In this repo you will find my walk-through in the world of Unit Testing, from \"beginner\" to not so bad. Development done with TypeScript/Node and Jest. How-to-start and detailed description of the project can be found in the readme file.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vntero/jesting.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/vntero/jesting/issues"
+  },
+  "homepage": "https://github.com/vntero/jesting#readme"
 }
