--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
+    "supertest": "^6.2.3",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
